<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor" >

    <LinearLayout
        android:id="@+id/LLSendRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edtEmailInFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/set_email_id"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@drawable/border" />

        <EditText
            android:id="@+id/edtCodeInFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/set_enter_code"
            android:inputType="text"
            android:padding="10dp"
            android:background="@drawable/border"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtPasswordInFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="5dp"
            android:hint="@string/set_enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@drawable/border"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSubmitNewPasswordInFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sb_submit"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@color/LoginPageColor"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSubmitInFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/sb_send_password"
            android:background="@color/LoginPageColor"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>