<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/tablecolorblue">
        <TextView
            android:id="@+id/blueStudentnametext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:text="@string/stv_student_name"
            android:gravity="center"
            />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginLeft="50dp"
                android:text="@string/stv_do_you_want_to_add"
                android:gravity="center"/>
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_add_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb_add"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="10dp"
            android:background="#2196f3"
            android:padding="8dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_close_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb_cancel"
            android:background="#2196f3"
            android:padding="8dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>


