<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/firstrelative">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/tablecolorblue">
            <TextView
                android:id="@+id/blueStudentnameremovetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:text="@string/stv_remove_student"
                android:gravity="center"
                />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondrelative">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/txtremovestudentView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="25dp"
                android:text="@string/stv_do_you_want_to_remove"
                android:gravity="center"/>
            />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/secondrelative"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_remove_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sb_delete"
                android:layout_marginRight="10dp"
                android:background="#2196f3"
                android:padding="8dp"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>
            <Button
                android:id="@+id/btn_closeremove_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sb_cancel"
                android:background="#2196f3"
                android:padding="8dp"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>


