<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dip"
    android:background="@drawable/borderblack">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="300dip"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:background="@drawable/borderblack"
        android:scaleType="centerCrop" />
    </LinearLayout>
 <!--   <ProgressBar
        android:id="@+id/progress"
        style="@style/ProgressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:indeterminate="false"
        android:max="100" /> -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:text="@string/stv_driver_name"
        android:id="@+id/drivernametext" />
            <!--<View-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="2dp"-->
                <!--android:background="#c0c0c0"/>-->

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/GridLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="@string/stv_speed_limit"
                android:id="@+id/speed" />
                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="@string/stv_rash_driving"
                android:id="@+id/rash" />
                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="@string/stv_time_maintenance"
                android:id="@+id/time" />
                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
             </GridLayout>
        </LinearLayout>
    </TableLayout>
</FrameLayout>